Fix: progress bar shift

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -1476,3 +1476,8 @@ ul.MuiList-root.MuiMenu-list.MuiList-dense>div:first-child {
 #txtLoginDisclaimer{
     resize: none;
 }
+
+.startTimeText,
+.endTimeText {
+    width: 4em;
+}
